@@ -12,6 +12,9 @@ import java.sql.Date;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.toList;
 
 @RestController
 @RequestMapping("/message")
@@ -33,7 +36,7 @@ public class MessageController {
                 service.findAll()
                         .stream()
                         .map(message -> modelMapper.map(message, MessageDTO.class))
-                        .toList(),
+                        .collect(Collectors.toList()),
                 HttpStatus.OK
         );
     }
